# test

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  conanfile.txt
cmake/: ClangTydi.cmake  CxxCompilerOptions.cmake
modules/smela/: CMakeLists.txt
modules/smela/include/smela/: User.h  Version.h.in
modules/smela/src/: Main.cpp  User.cpp
scripts/: build-clang-x64-debug  build-clang-x64-release  build-gcc-x64-debug  build-gcc-x64-release  build-msvc14-x64-Debug.cmd  build-vc14-x64-debug.cmd  build-vc14-x64-release.cmd  cmakegen-clang-x64-debug  cmakegen-clang-x64-release  cmakegen-vc14-x64-debug.cmd  cmakegen-vc14-x64-release.cmd
tests/: CMakeLists.txt  Test.cpp  UserTests.cpp
